--- a/Styles/Movies.css
+++ b/Styles/Movies.css
@@ -129,8 +129,17 @@ nav ul li a:hover {
 .grid-container {
    display: grid;
    padding: 60px 0;
-   grid-template-columns: repeat(5, 1fr);
+   grid-template-columns: repeat(7, 1fr);
    gap: 40px;
+}
+.big-poster{
+grid-column: span 2;
+grid-row: span 2;
+height: 100%;
+
+}
+.cover-poster{
+   grid-column: span 2;
 }
 
 .movie-card {
@@ -144,7 +153,7 @@ nav ul li a:hover {
 
 .movie-card img {
    width: 100%;
-   max-height: 300px;
+   max-height: 100%;
    display: block;
    object-fit: cover;
    object-position: top;
